syntax = "proto3";

package workout_training_api.ping.v1;

option go_package="workout-training-api/internal/grpc/generated/workout-training-api/workout/v1";

import "google/protobuf/timestamp.proto";
import "workout-training-api/workout/v1/model.proto";

message UpdateWorkoutRequest {
  string workout_id = 1;
  repeated Exercise exercises = 2;
  repeated string comments = 3;
}

message UpdateWorkoutResponse {}